--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,10 @@ scikit-learn>=1.0.0
 geopy>=2.4.0
 joblib>=1.3.0
 python-dotenv>=1.0.0
+torch>=2.0.0
+torchvision>=0.15.0
+Pillow>=9.0.0
+psycopg2-binary>=2.9.9
+dj-database-url>=2.1.0
+gunicorn>=21.2.0
+whitenoise>=6.6.0
