--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: aidhub
     env: python
     buildCommand: ./build.sh
-    startCommand: cd aidhub && gunicorn aidhub.wsgi:application
+    startCommand: cd aidhub && gunicorn aidhub.wsgi:application --config ../gunicorn_config.py
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
@@ -22,15 +22,19 @@ services:
       - key: EMAIL_HOST_PASSWORD
         value: jzio inzq lhqg azeg
       - key: DATABASE_URL
+        value: postgresql://aidhub_user:5jPXPvDe3WWVPHgGSlRyhmXhlj1YGpRR@dpg-cvnnlqp5pdvs73bamgrg-a.oregon-postgres.render.com/aidhub
         fromDatabase:
           name: aidhub_db
           property: connectionString
+      - key: PORT  # Add PORT explicitly
+        value: 8000
+      - key: MALLOC_ARENA_MAX  # Add memory optimization
+        value: 2
     
-    # Add memory configuration
-    plan: free  # Specify the free plan
+    plan: free
     resources:
-      memory: 512M  # Request 512MB memory
-      cpu: 0.5      # Request 0.5 CPU
+      memory: 1024M  # Increased memory allocation
+      cpu: 1.0      # Increased CPU allocation
 
     autoDeploy: true
     buildFilter:
